k8s/rp/kustomize/rp/overlays/local/rp/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rp
  labels:
    app: rp
spec:
  tls:
  - hosts:
      - demo-rp.||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: demo-rp.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: verifier
            port:
              name: http
